fix footer logo url reference on mobile devices

--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -5036,7 +5036,7 @@ only screen and (min-resolution:192dpi),
 only screen and (min-resolution:2dppx) {
     .logo-footer-truenth,
     .footer__logo--truenth {
-        background-image: url(../img/logo-white@2x.png);
+        background-image: url(/static/img/TrueNTH-Footer-Logo.png);
         background-size: 89px 101px;
         background-repeat: no-repeat;
     }
